# karboni

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  template.env
.github/: copilot-instructions.md
src/karboni/: __init__.py  async_utils.py  cli.py  exceptions.py  http.py  logging_utils.py  typing.py  utils.py
src/karboni/database/: __init__.py  engine.py  library.py  schema.py
src/karboni/zotero/: __init__.py  config.py  delta.py  handler.py  sync.py
